Setting up, basic hello world overlay

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
-support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Friendly Fishing
+author=Bogstandard
+support=https://github.com/bogstandard/friendly-fishing
+description=Make fishing a little more fun
+tags=fishing,fish,fun,comfy,silly
+plugins=com.friendlyfishing.FriendlyFishingPlugin
