--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,12 @@ plugins {
 repositories {
 	mavenLocal()
 	maven {
-		url = 'https://repo.runelite.net'
+		url = 'http://repo.runelite.net'
 	}
 	mavenCentral()
 }
 
-def runeLiteVersion = '1.8.7.1'
+def runeLiteVersion = '1.8.21'
 
 dependencies {
 	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
