change the focus of the plugin!

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Friendly Fishing
+displayName=Dice
 author=Bogstandard
-support=https://github.com/bogstandard/friendly-fishing
-description=Make fishing a little more fun
-tags=fishing,fish,fun,comfy,silly
-plugins=com.friendlyfishing.FriendlyFishingPlugin
+support=https://github.com/bogstandard/dice
+description=Animated On-Screen Rollable Dice
+tags=dice,diceman,diceman mode,roll,random,chance,roleplay,tabletop
+plugins=com.dice.DicePlugin
